--- a/views/admin/categories/index.ejs
+++ b/views/admin/categories/index.ejs
@@ -21,7 +21,7 @@
                     <th><%= category.title %></th>
                     <th><%= category.slug %></th>
                     <th>
-                        <a href="/admin/categories/edit/<%= category.id %>>" class="btn btn-warning">Editar</a>
+                        <a href="/admin/categories/edit/<%= category.id %>" class="btn btn-warning">Editar</a>
 
                         <form method="POST" action="/categories/delete" style="display:inline;" onsubmit="confirmarDelecao(event, this)">
                             <input type="hidden" name="id" value="<%= category.id %>"/>
