projeto em andamento

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,21 @@
 <%- include ('partials/header') %>
+<%- include ('partials/homenavbar') %>
 <body>
-    <h1>Ola mundo!</h1>
+    <div class="container">
+        <% articles.forEach(article => {%>
+            <hr>
+            <h1>Bem vindo!</h1>
+            <hr>
+            <div class="card">
+                <div class="card-header">
+                    <h2><%= article.title %></h2>
+                </div>
+                <div class="card-body">
+                    <a href="" class="btn btn-success">Ler artigo</a>
+                </div>
+                <br>
+            </div>
+        <%})%>
+    </div>
 </body>
 <%- include ('partials/footer') %>
