--- a/views/partials/homenavbar.ejs
+++ b/views/partials/homenavbar.ejs
@@ -4,10 +4,7 @@
     </a>
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-            <a class="nav-link" href="/admin/categories">Categorias</a>
+            <a class="nav-link" href="/">Home</a>
         </li>   
-        <li class="nav-item">
-            <a class="nav-link" href="/admin/articles">Artigos</a>
-        </li>
     </ul>
 </nav>
