--- a/views/partials/homenavbar.ejs
+++ b/views/partials/homenavbar.ejs
@@ -5,6 +5,11 @@
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
             <a class="nav-link" href="/">Home</a>
-        </li>   
+        </li>  
+        <% categories.forEach( category => {%>
+            <li class="nav-item">
+                <a class="nav-link" href="/"><%=category.title %>></a>
+            </li>  
+        <%})%>
     </ul>
 </nav>
